force-app/main/default/objects/TestObject__c/fields/CheckboxField__c.field-meta.xml
<CustomField>
    <fullName>CheckboxField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckboxField</label>
    <type>Checkbox</type>
</CustomField>