force-app/main/default/objects/TestObject__c/fields/DateTimeField__c.field-meta.xml
<CustomField>
    <fullName>DateTimeField__c</fullName>
    <label>DateTimeField</label>
    <type>DateTime</type>
</CustomField>