force-app/main/default/objects/TestObject__c/fields/Delete_this_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Delete_this_Picklist__c</fullName>
    <label>Delete this Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test_Global_Picklist_Value_Set</valueSetName>
    </valueSet>
</CustomField>