force-app/main/default/objects/TestObject__c/fields/Geolocation_Field__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Field__c</fullName>
    <label>Geolocation Field</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>