force-app/main/default/objects/TestObject__c/fields/IsLastUpdateSuccessful__c.field-meta.xml
<CustomField>
    <fullName>IsLastUpdateSuccessful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Было ли последнее обновление записи успешным?</description>
    <label>IsLastUpdateSuccessful</label>
    <type>Checkbox</type>
</CustomField>