force-app/main/default/objects/TestObject__c/fields/Picklist_1__c.field-meta.xml
<CustomField>
    <fullName>Picklist_1__c</fullName>
    <label>Picklist 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CheckboxField__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist 1-1</fullName>
            </value>
            <value>
                <fullName>Picklist 1-2</fullName>
            </value>
            <value>
                <fullName>Picklist 1-3</fullName>
            </value>
            <value>
                <fullName>Picklist 1-4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>