force-app/main/default/objects/TestObject__c/fields/Picklist_2__c.field-meta.xml
<CustomField>
    <fullName>Picklist_2__c</fullName>
    <label>Picklist 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist 2-1</fullName>
            </value>
            <value>
                <fullName>Picklist 2-2</fullName>
            </value>
            <value>
                <fullName>Picklist 2-3</fullName>
            </value>
            <value>
                <fullName>Picklist 2-4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>