force-app/main/default/objects/TestObject__c/fields/RollUpSummary_Field__c.field-meta.xml
<CustomField>
    <fullName>RollUpSummary_Field__c</fullName>
    <label>RollUpSummary Field</label>
    <summarizedField>TestObjectJunction__c.Number_Field__c</summarizedField>
    <summaryForeignKey>TestObjectJunction__c.TestObject__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>