force-app/main/default/objects/TestObject__c/fields/RollUpSummaryCount_Field__c.field-meta.xml
<CustomField>
    <fullName>RollUpSummaryCount_Field__c</fullName>
    <label>RollUpSummaryCount Field</label>
    <summaryForeignKey>TestObjectJunction__c.TestObject__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>