force-app/main/default/objects/TestObject__c/fields/TestObjectParent1__c.field-meta.xml
<CustomField>
    <fullName>TestObjectParent1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TestObjectParent1</label>
    <referenceTo>TestObjectParent__c</referenceTo>
    <relationshipLabel>TestObjects (TestObjectParent1)</relationshipLabel>
    <relationshipName>TestObjects1</relationshipName>
    <type>Lookup</type>
</CustomField>