force-app/main/default/objects/TestObject__c/fields/TestObjectParent__c.field-meta.xml
<CustomField>
    <fullName>TestObjectParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TestObjectParent</label>
    <referenceTo>TestObjectParent__c</referenceTo>
    <relationshipLabel>TestObjects</relationshipLabel>
    <relationshipName>TestObjects</relationshipName>
    <type>Lookup</type>
</CustomField>