force-app/main/default/objects/TestObject__c/fields/TextField__c.field-meta.xml
<CustomField>
    <fullName>TextField__c</fullName>
    <label>TextField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>